# supervision-sandbox

./: .gitignore  README.md  pyproject.toml
docs/: implementation-plan.md  specification.md
src/attention_monitor/: __init__.py  __main__.py  app.py  attention.py  capture.py  config.py  detector.py  facemesh.py  gaze.py  headpose.py  headpose_mp.py  pipeline.py  render.py  settings.py  state.py  stats.py  status.py  tracking.py  ui.py
tests/: test_attention.py  test_config.py  test_gaze.py  test_headpose.py  test_headpose_mp.py  test_settings.py  test_state.py  test_stats.py  test_tracking.py
