[project]
name = "attention-monitor"
version = "0.1.0"
description = "Realtime presence & attention status monitor (YOLO-pose + Supervision)"
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.4.70",
    "supervision>=0.29.0",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
    "mediapipe>=0.10.35",
]

[project.scripts]
attention-monitor = "attention_monitor.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attention_monitor"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
